--- a/index.html
+++ b/index.html
@@ -75,5 +75,28 @@
             </div>
         </div>
     </section>
+    <section class="reviews">
+        <h2 class="review_subheader">Отзывы</h2>
+            <div class="container">
+                <div class="review">
+                    <img src="img/icons/user.png" alt="avatar">
+                    <p><span>Игорь Чернов</span> г. Оренбург</p>
+                    <p>Быстро нашел парковочное место.</p>
+                </div>
+                <div class="review">
+                    <img src="img/icons/user.png" alt="avatar">
+                    <p><span>Ирина Крылова</span> г. Оренбург</p>
+                    <p>Только охраняемые парковки.</p>
+                </div>
+                <div class="review">
+                    <img src="img/icons/user.png" alt="avatar">
+                    <p><span>Марина Белова</span> г. Оренбург</p>
+                    <p>Отличный сайт.</p>
+                </div>
+            </div>
+    </section>
+    <footer>
+        <p class="footer_text">Все права защищены © 2023</p>
+    </footer>
 </body>
 </html>
