--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <a href="index.html"><img class="header_logo" src="img/icons/logo.png" alt="Логотип ParkEye"></a>
-        <a href="#" class="menu_link">Парковка</a>
+        <a href="parking.html" class="menu_link">Парковка</a>
         <a href="#" class="menu_link">Отзывы</a>
         <a href="#" class="menu_link">Зарегестрироваться</a>
         <a href="#" class="menu_link">Войти</a>
