--- a/parking.html
+++ b/parking.html
@@ -4,9 +4,61 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Парковки - ParkEye</title>
+    <link rel="shortcut icon" href="img/icons/eye.png" type="image/png">
+    <link rel="stylesheet" href="css/general.css">
+    <link rel="stylesheet" href="css/style2.css">
 </head>
 <body>
-    Кто прочитал, тот шарик-лошарик
+    <header>
+        <a href="index.html"><img class="header_logo" src="img/icons/logo.png" alt=""></a>
+        <a href="parking.html" class="menu_link">Парковка</a>
+        <a href="#" class="menu_link">Отзывы</a>
+        <a href="#" class="menu_link">Зарегестрироваться</a>
+        <a href="#" class="menu_link">Войти</a>
+        <a href="#"><div class="account"></div></a>
+    </header>
+    <h1>Парковка</h1>
+    <section class="parking">
+        
+        <div class="place">
+            <h2 class="place_subheader">Мпп-Авто, автостоянка</h2>
+            <p class="place_text">Адрес: Джангильдина, 28 к2</p>
+            <button class="place_btn">Забронировать</button>
+        </div>
+        <div class="place">
+            <h2 class="place_subheader">Автостоянка (Нижний проезд)</h2>
+            <p class="place_text">Адрес: Нижний проезд, 1</p>
+            <button class="place_btn">Забронировать</button>
+        </div>
+        <div class="place">
+            <h2 class="place_subheader">Автостоянка (Телевизионный переулок)</h2>
+            <p class="place_text">Адрес: Телевизионный переулок, 3г</p>
+            <button class="place_btn">Забронировать</button>
+        </div>
+        <div class="place">
+            <h2 class="place_subheader">Автостоянка</h2>
+            <p class="place_text">Адрес: Просторная, 29 к1</p>
+            <button class="place_btn">Забронировать</button>
+        </div>
+        <div class="place">
+            <h2 class="place_subheader">Автостоянка</h2>
+            <p class="place_text">Адрес: проспект Братьев Коростелёвых, 179</p>
+            <button class="place_btn">Забронировать</button>
+        </div>
+        <div class="place">
+            <h2 class="place_subheader">Динамо, автостоянка</h2>
+            <p class="place_text">Адрес: Гая, 10Б</p>
+            <button class="place_btn">Забронировать</button>
+        </div>
+        <div class="place">
+            <h2 class="place_subheader">Автостоянка</h2>
+            <p class="place_text">Адрес: проспект Победы, 2/2</p>
+            <button class="place_btn">Забронировать</button>
+        </div>
+    </section>
+    <footer>
+        <p class="footer_text">Все права защищены © 2023</p>
+    </footer>
 </body>
 </html>
