--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ParkEye - Бронирование парковочных мест для крупногаборитного транспорта</title>
+    <link rel="stylesheet" href="css/general.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="img/icons/eye.png" type="image/png">
 </head>
 <body>
     <header>
