--- a/parking.html
+++ b/parking.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,7 +13,7 @@
     <header>
         <a href="index.html"><img class="header_logo" src="img/icons/logo.png" alt=""></a>
         <a href="parking.html" class="menu_link">Парковка</a>
-        <a href="#" class="menu_link">Отзывы</a>
+        <a href="reviews.html" class="menu_link">Отзывы</a>
         <a href="#" class="menu_link">Зарегестрироваться</a>
         <a href="#" class="menu_link">Войти</a>
         <a href="#"><div class="account"></div></a>
