--- a/parking.html
+++ b/parking.html
@@ -14,9 +14,9 @@
         <a href="index.html"><img class="header_logo" src="img/icons/logo.png" alt=""></a>
         <a href="parking.html" class="menu_link">Парковка</a>
         <a href="reviews.html" class="menu_link">Отзывы</a>
-        <a href="#" class="menu_link">Зарегестрироваться</a>
-        <a href="#" class="menu_link">Войти</a>
-        <a href="#"><div class="account"></div></a>
+        <a href="registration.html" class="menu_link">Зарегестрироваться</a>
+        <a href="avtorization.html" class="menu_link">Войти</a>
+        <a href="lk.html"><div class="account"></div></a>
     </header>
     <h1 class="header">Парковка</h1>
     <section class="parking">
