--- a/reviews.html
+++ b/reviews.html
@@ -14,9 +14,9 @@
         <a href="index.html"><img class="header_logo" src="img/icons/logo.png" alt=""></a>
         <a href="parking.html" class="menu_link">Парковка</a>
         <a href="reviews.html" class="menu_link">Отзывы</a>
-        <a href="#" class="menu_link">Зарегестрироваться</a>
-        <a href="#" class="menu_link">Войти</a>
-        <a href="#"><div class="account"></div></a>
+        <a href="registration.html" class="menu_link">Зарегестрироваться</a>
+        <a href="avtorization.html" class="menu_link">Войти</a>
+        <a href="lk.html"><div class="account"></div></a>
     </header>
     <h1 class="header">Отзывы</h1>
     <section class="reviews">
@@ -45,6 +45,7 @@
             <p>Игорь Чернов <br> г. Оренбург <br> Быстро нашел парковочное место.</p>
         </div>
     </section>
+    <button class="review_btn">Добавить отзыв</button>
     <footer>
         <p class="footer_text">Все права защищены © 2023</p>
     </footer>
