--- a/index.html
+++ b/index.html
@@ -20,20 +20,20 @@
     </header>
 
     <main>
-        <div class="main_promo_text"><h1>Достаточно одной “Секунды”!<br>Забронируйте парковку прямо сейчас.</h1></div>
+        <div class="main_promo_text"><h1>Безопасная парковка для мощной техники<br> решение нашего сайта!</h1></div>
     </main>
     <section class="promo">
         <div class="office">
             <h2 class="office_subheader">Личный кабинет</h2>
             <img class="office_img" src="img/icons/office.png" alt="">
             <p class="office_text">ParkEye помогает экономить время на поиски свободного места и сокращает расходы на парковку для коллег и клиентов.</p>
-            <button class="office_btn">Завести кабинет</button>
+            <button class="office_btn" onclick="window.location.href='registration.html'">Завести кабинет</button>
         </div>
         <div class="parking">
             <h2 class="parking_subheader">Поиск парковки</h2>
             <img class="parking_img" src="img/icons/Parking.png" alt="">
             <p class="parking_text">ParkEye сам найдет свободное место для вас, сокращая расходы на парковку<br> для коллег и клиентов.</p>
-            <button class="parking_btn">Найти парковку</button>
+            <button class="parking_btn" onclick="window.location.href='parking.html'">Найти парковку</button>
         </div>
     </section>
     <section class="info">
