--- a/lk.html
+++ b/lk.html
@@ -19,6 +19,20 @@
         <a href="lk.html"><div class="account"></div></a>
     </header>
     <h1 class="header">Личный кабинет</h1>
+    <div class="data">
+        <div class="item">
+            <p class="text"><span>Email:  </span>Ivan123@gmail.com</p>
+        </div>
+        <hr>
+        <div class="item">
+            <p class="text"><span>ФИО:  </span>Иванов Иван Иванович</p>
+        </div>
+        <hr>
+        <div class="item">
+            <p class="text"><span>Телефон:  </span>+7(800)555-35-35</p>
+        </div>   
+        <hr>
+    </div>
     <footer>
         <p class="footer_text">Все права защищены © 2023</p>
     </footer>
