--- a/reviews.html
+++ b/reviews.html
@@ -22,32 +22,33 @@
     <section class="reviews">
         <div class="review">
             <img src="img/icons/user.png" alt="avatar">
-            <p>Игорь Чернов <br> г. Оренбург <br> Быстро нашел парковочное место.</p>
+            <p>Васильев Захар <br> г. Оренбург <br> Очень удобно, чисто, охрана, зимой моют от снега и грязи при въезде. Цена адекватная.</p>
         </div>
         <div class="review">
             <img src="img/icons/user.png" alt="avatar">
-            <p>Игорь Чернов <br> г. Оренбург <br> Быстро нашел парковочное место.</p>
+            <p>Федоров Демид <br> г. Оренбург <br> Отличный вариант поиска парковочного места.</p>
         </div>
         <div class="review">
             <img src="img/icons/user.png" alt="avatar">
-            <p>Игорь Чернов <br> г. Оренбург <br> Быстро нашел парковочное место.</p>
+            <p>Крылов Семён <br> г. Оренбург <br> Быстрый и удобный сервис. Никаких заморочек с поиском свободных мест на парковках или расчетами времени. Просто зарезервировал место, приехал и паркуюсь. Спасибо за такую возможность!</p>
         </div>
         <div class="review">
             <img src="img/icons/user.png" alt="avatar">
-            <p>Игорь Чернов <br> г. Оренбург <br> Быстро нашел парковочное место.</p>
+            <p>Щукин Леонид <br> г. Оренбург <br> Радует широкий выбор парковок в разных частях города. Соотношение цены и качества на уровне.</p>
         </div>
         <div class="review">
             <img src="img/icons/user.png" alt="avatar">
-            <p>Игорь Чернов <br> г. Оренбург <br> Быстро нашел парковочное место.</p>
+            <p>Кузнецов Игорь <br> г. Оренбург <br> Сервис работает круглосуточно и помогает сэкономить время, которое в обычной жизни бы ушло на поиск парковки. Я доволен качеством работы сервиса — все просто и хорошо организовано.</p>
         </div>
         <div class="review">
             <img src="img/icons/user.png" alt="avatar">
-            <p>Игорь Чернов <br> г. Оренбург <br> Быстро нашел парковочное место.</p>
+            <p>Кузнецова Наталья <br> г. Оренбург <br> Очень удобный способ зарезервировать парковочное место. Все легко и прозрачно. Чувствуется, что сервис действительно продуман для клиентов.</p>
         </div>
     </section>
-    <button class="review_btn">Добавить отзыв</button>
+    <button class="review_btn" onclick="reviewed()">Добавить отзыв</button>
     <footer>
         <p class="footer_text">Все права защищены © 2023</p>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
