--- a/index.html
+++ b/index.html
@@ -82,17 +82,17 @@
             <div class="container">
                 <div class="review">
                     <img src="img/icons/user.png" alt="avatar">
-                    <p><span>Игорь Чернов</span> г. Оренбург</p>
+                    <p>Игорь Чернов<br> г. Оренбург</p>
                     <p>Быстро нашел парковочное место.</p>
                 </div>
                 <div class="review">
                     <img src="img/icons/user.png" alt="avatar">
-                    <p><span>Ирина Крылова</span> г. Оренбург</p>
+                    <p>Ирина Крылова<br> г. Оренбург</p>
                     <p>Только охраняемые парковки.</p>
                 </div>
                 <div class="review">
                     <img src="img/icons/user.png" alt="avatar">
-                    <p><span>Марина Белова</span> г. Оренбург</p>
+                    <p>Марина Белова<br> г. Оренбург</p>
                     <p>Отличный сайт.</p>
                 </div>
             </div>
