--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <a href="index.html"><img class="header_logo" src="img/icons/logo.png" alt="Логотип ParkEye"></a>
         <a href="parking.html" class="menu_link">Парковка</a>
         <a href="reviews.html" class="menu_link">Отзывы</a>
-        <a href="registration.html" class="menu_link">Зарегестрироваться</a>
+        <a href="registration.html" class="menu_link">Зарегистрироваться</a>
         <a href="avtorization.html" class="menu_link">Войти</a>
         <a href="lk.html"><div class="account"></div></a>
     </header>
@@ -27,7 +27,7 @@
             <h2 class="office_subheader">Личный кабинет</h2>
             <img class="office_img" src="img/icons/office.png" alt="">
             <p class="office_text">ParkEye помогает экономить время на поиски свободного места и сокращает расходы на парковку для коллег и клиентов.</p>
-            <button class="office_btn" onclick="window.location.href='registration.html'">Завести кабинет</button>
+            <button class="office_btn" onclick="window.location.href='avtorization.html'">Личный кабинет</button>
         </div>
         <div class="parking">
             <h2 class="parking_subheader">Поиск парковки</h2>
