--- a/reviews.html
+++ b/reviews.html
@@ -14,7 +14,7 @@
         <a href="index.html"><img class="header_logo" src="img/icons/logo.png" alt=""></a>
         <a href="parking.html" class="menu_link">Парковка</a>
         <a href="reviews.html" class="menu_link">Отзывы</a>
-        <a href="registration.html" class="menu_link">Зарегестрироваться</a>
+        <a href="registration.html" class="menu_link">Зарегистрироваться</a>
         <a href="avtorization.html" class="menu_link">Войти</a>
         <a href="lk.html"><div class="account"></div></a>
     </header>
@@ -38,7 +38,7 @@
         </div>
         <div class="review">
             <img src="img/icons/user.png" alt="avatar">
-            <p>Кузнецов Игорь <br> г. Оренбург <br> Сервис работает круглосуточно и помогает сэкономить время, которое в обычной жизни бы ушло на поиск парковки. Я доволен качеством работы сервиса — все просто и хорошо организовано.</p>
+            <p>Осипова София <br> г. Оренбург <br> Сайт очень удобный! Наконец отец не орет из-за того, что не может найти паркову. Теперь у него нет отговорок и он спокойно подвозит меня!</p>
         </div>
         <div class="review">
             <img src="img/icons/user.png" alt="avatar">
