--- a/avtorization.html
+++ b/avtorization.html
@@ -14,7 +14,7 @@
         <a href="index.html"><img class="header_logo" src="img/icons/logo.png" alt=""></a>
         <a href="parking.html" class="menu_link">Парковка</a>
         <a href="reviews.html" class="menu_link">Отзывы</a>
-        <a href="registration.html" class="menu_link">Зарегестрироваться</a>
+        <a href="registration.html" class="menu_link">Зарегистрироваться</a>
         <a href="avtorization.html" class="menu_link">Войти</a>
         <a href="lk.html"><div class="account"></div></a>
     </header>
@@ -32,7 +32,7 @@
         </div>
     
         <div class="container regis">
-        <p>У вас нет аккаунта? <a href="registration.html">Зарегестрироваться</a>.</p>
+        <p>У вас нет аккаунта? <a href="registration.html">Зарегистрироваться</a>.</p>
         </div>
     </form>
     <footer>
