--- a/lk.html
+++ b/lk.html
@@ -14,7 +14,7 @@
         <a href="index.html"><img class="header_logo" src="img/icons/logo.png" alt=""></a>
         <a href="parking.html" class="menu_link">Парковка</a>
         <a href="reviews.html" class="menu_link">Отзывы</a>
-        <a href="registration.html" class="menu_link">Зарегестрироваться</a>
+        <a href="registration.html" class="menu_link">Зарегистрироваться</a>
         <a href="avtorization.html" class="menu_link">Войти</a>
         <a href="lk.html"><div class="account"></div></a>
     </header>
